// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageSubtitle - Snapshots > matches snapshot for h2 element 1`] = `
<h2
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
>
  H2 subtitle
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot for h5 element 1`] = `
<h5
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
>
  H5 subtitle
</h5>
`;

exports[`PageSubtitle - Snapshots > matches snapshot for p element 1`] = `
<p
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
>
  P subtitle
</p>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with complex children 1`] = `
<h2
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
>
  <span>
    Complex
  </span>
   
  <strong>
    subtitle
  </strong>
   content
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with custom className 1`] = `
<h2
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl custom-subtitle"
>
  Custom subtitle
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with data-testid prop 1`] = `
<h2
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
  data-testid="page-subtitle"
>
  Subtitle with test ID
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with default props 1`] = `
<h2
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
>
  Test subtitle
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with id prop 1`] = `
<h2
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
  id="subtitle-id"
>
  Subtitle with ID
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with simple content 1`] = `
<h2
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
>
  Simple subtitle
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with title prop 1`] = `
<h2
  class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
>
  Title prop subtitle
</h2>
`;
